src/Modal/Modal.less
@import "../fonts.less";

.Modal {
  position: fixed;
  z-index: 200;
}

.Modal--background {
  position: fixed;
  height: 100%;
  width: 100%;
  top: 0;
  left: 0;
  background: #000;
  opacity: 0.6;
  filter: alpha(opacity=60);
}

.Modal--window {
  position: relative;
  top: 50%;
  left: 50%;
  transform: translateY(-50%);
  -webkit-transform: translateY(-50%);
  position: fixed;
  background: #fff;
  border: 6px solid #3b4349;
  border-radius: 4px;
  font-family: "Proxima Nova";
  max-height: 80%;
  box-sizing: border-box;
  padding-top: 35px;
}

.Modal--header{
  padding: 0 45px;

  h2{
    margin:0;
  }
}

.Modal--close{
  display: block;
  position: absolute;
  cursor: pointer;
  width: 16px;
  height: 16px;
  background: url(./close.png);
  right: 10px;
  top: 10px;
  outline: none;
  border: none;
  padding: 0;
  margin: 0;
}

.Modal--window--content {
  position: relative;
  padding: 35px 45px;
  padding-top: 15px;
  overflow-y: scroll;
  box-sizing: border-box;
}

